# group5

./: .gitignore  index.html
dumb-client/: CMakeLists.txt  ClientNetwork.cpp  main.cpp
dumb-everything/: CMakeLists.txt
graphics/: CMakeLists.txt  CMakeSettings.json  imgui.ini  main.cpp  notes.txt
graphics/assets/: Airplane Plant.mtl  Bambus01_Leaves.mtl  Building02.mtl  Bush1 2.mtl  Bush2.mtl  Cloud 4.fbx  Earth_power.fbx  Fire_power.fbx  Fire_power.mtl  Flag_updated1.mtl  Groundwork.mtl  Hanging Ivy 1.mtl  Island 01.mtl  Island 02.mtl  Island Fragment 3.mtl  Island Fragment 5.fbx  Island Fragment 6.mtl  Island Fragment 8.fbx  Ivy2.mtl  Jump.fbx  Jumpv2.fbx  Jumpv3.fbx  Jumpv4.fbx  Jumpv5.fbx  Jwalk.fbx  Jwalk2.fbx  Jwalk4.fbx  Jwalk5.fbx  Jwalk6.fbx  Jwalk7.fbx  Jwalk8.fbx  Large Crate.mtl  Metal_power.fbx  Plant 2.mtl  Plant3 2.mtl  Plant4 2.mtl  Platform 1.fbx  Small Island Fragment 1.mtl  Small Plant 1.mtl  Water_Power.fbx  (+25 more)
graphics/assets/audiofiles/filtered_music/: boost_and_round_cello.py  boost_lows.py  electrify_and_enrich.py  enrich.py  filtermusic.py  round_cello.py
graphics/enc_temp_folder/27f8d77b71fdeec3c21b596ca987546b/: PlayerObject.cpp
graphics/include/: Animation.h  Audio.h  Camera.h  Channel.h  Cube.h  DOF.h  Global.h  Joint.h  Keyframe.h  Light.h  Mesh.h  Object.h  Particle.h  Player.h  PlayerObject.h  Scene.h  Skeleton.h  Skin.h  SkinWeights.h  Skybox.h  System.h  Triangle.h  UIImg.h  UIManager.h  Water.h  Window.h
graphics/include/network/: ClientGame.h  ClientNetwork.h  NetworkData.h
graphics/include/network/shared/: NetworkData.h
graphics/include/wasp_walk/wasp/: wasp_dance.anim
graphics/lib/fmod/api/studio/examples/vs2017/: 3d.vcxproj  3d_multi.vcxproj  event_parameter.vcxproj  examples.sln  load_banks.vcxproj  music_callbacks.vcxproj  objectpan.vcxproj  programmer_sound.vcxproj  recording_playback.vcxproj  simple_event.vcxproj
graphics/lib/fmod/api/studio/examples/vs2019/: 3d.vcxproj  3d_multi.vcxproj  event_parameter.vcxproj  examples.sln  load_banks.vcxproj  music_callbacks.vcxproj  objectpan.vcxproj  programmer_sound.vcxproj  recording_playback.vcxproj  simple_event.vcxproj
graphics/shaders/: clock.frag  clock.vert  cloudShader.frag  healthbar.frag  healthbar.vert  healthnums.frag  killfeed.frag  magic.frag  magic.vert  paint.frag  paint.vert  particleShader.frag  particleShader.vert  pickup.frag  shader.frag  shader.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  spectral.frag  spectral.vert  testShader.frag  testShader.vert  texShader.frag  texShader.vert  ui.frag  ui.vert  vignette.frag  waterShader.frag  waterShader.vert
graphics/src/: Animation.cpp  Audio.cpp  Camera.cpp  Channel.cpp  Cube.cpp  DOF.cpp  Joint.cpp  Keyframe.cpp  Light.cpp  Mesh.cpp  Object.cpp  Particle.cpp  Player.cpp  PlayerObject.cpp  Scene.cpp  Skeleton.cpp  Skin.cpp  SkinWeights.cpp  Skybox.cpp  System.cpp  Triangle.cpp  UIImg.cpp  UIManager.cpp  Water.cpp  Window.cpp  stb_image_definer.cpp  wasp.anim
graphics/src/network/: ClientGame.cpp  ClientNetwork.cpp  NetworkServices.cpp  stdafx.cpp
include/shared/: NetworkData.h  ObjectData.h
include/shared/composites/: aabb_export.csv.txt
physics-engine/: PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.h
physics-engine/Collision/: CollisionDetection.cpp  CollisionDetection.h  CollisionResolver.cpp  CollisionResolver.h  ContactManifold.cpp  ContactManifold.h
physics-engine/Constraints/: Constraint.cpp  Constraint.h
physics-engine/Core/: GameObject.cpp  GameObject.h  Integrator.cpp  Integrator.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h
physics-engine/Utilities/: Transform.cpp  Transform.h  main.cpp
physics-engine/colliders/: Collider.h  ConvexHullCollider.cpp
physics-engine/forces/: ForceGenerator.cpp  ForceGenerator.h  GravityForce.cpp  GravityForce.h  SpringForce.cpp  SpringForce.h
shared/: NetworkData.h  ObjectData.h
test-client/: CMakeLists.txt  main.cpp  vcpkg.json
test-client/shaders/: fragment.glsl  vertex.glsl
test-test-client/: CMakeLists.txt  main.cpp
test-test-client/include/: ClientGame.h  Cube.h  NetworkData.h  Window.h
test-test-client/src/: ClientGame.cpp  Cube.cpp  Window.cpp
test-test-server/: .gitignore  CMakeLists.txt  CppProperties.json  InputManager.cpp  NetworkData.h  ServerGame.cpp  ServerGame.h  ServerNetwork.cpp  main.cpp
test-test-server/colliders/: Building02.txt  Cloud 4.txt  Island 01.txt  Island 02.txt  Island Fragment 3.txt  Island Fragment 5.txt  Island Fragment 6 (2).txt  Island Fragment 6.txt  Island Fragment 7.txt  Island Fragment 8.txt  Island Fragment 9.txt  Landbridge 1.txt  Large Crate.txt  Platform 1.txt  Small Island Fragment 1.txt  corridor-2.txt  corridor1.txt  floating-island.txt  island.txt
test-test-server/enc_temp_folder/2dcaab8ec4ec284529515a697347cb49/: PhysicsSystem.cpp
test-test-server/enc_temp_folder/39abf6017b341a974f372f3cbe42451/: PhysicsSystem.h
test-test-server/enc_temp_folder/50d3238167ab8b4b9a37e9a906dcc1f/: PhysicsData.h
test-test-server/include/: FlagBehaviorComponent.cpp  InputManager.h  NetworkData.h  ServerGame.h  ServerNetwork.h  core.h  stdafx.h
test-test-server/include/glm/gtx/: io.inl
test-test-server/include/physics/: AABB.h  BehaviorComponent.h  GameObject.h  Octree.h  PhysicsData.h  PhysicsSystem.h
test-test-server/include/shared/: ObjectData.h
test-test-server/physics/: AABB.cpp  FlagBehaviorComponent.cpp  MetalProjectileBehaviorComponent.cpp  Octree.cpp  PhysicsDraftFile.cpp  PhysicsSystem.cpp  PickupBehaviorComponent.cpp  PlayerBehaviorComponent.cpp  ProjectileBehaviorComponent.cpp
website/: finalreport.html  index.html  reports.html  spec.html
